<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panjang"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebar"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_lebar"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="@string/save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_volume"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/volume" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_keliling"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/keliling" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_luas"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/luas" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hasil"
        android:text="@string/hasil"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginBottom="16dp"/>

</LinearLayout>